fixed text alignment and gif was slowed down

--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,7 @@ body {
 .header {
     font-size: 75px;
     color: bisque;
+    text-shadow: 4px 2px 16px rgb(0 0 0 / 65%);
 }
 
 .bg {
@@ -32,10 +33,12 @@ body {
     background-color: rgba(0, 0, 0, 0.8);
     padding: 10px;
     margin-top: 25px;
+    border-radius: 8px;
 }
 
 .about-me .row {
     margin: 0;
+    text-align: center;
 }
 
 .icon {
